--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -2,6 +2,7 @@
 $primary: #FFE600;
 $secondary: #3483FA;
 $backgroud-color: #EEEEEE;
+$backgroud-color-secondary: #FFFFFF;
 $text-primary: #333333;
 $text-secondary: #666666;
 $text-terciary: #999999;
