add padding to the searchBar

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -21,7 +21,8 @@
 .searchBar {
   background-color: $backgroud-color-secondary;
   width: 95%;
-  height: 100%;
+  height: 30px;
+  padding: 5px;
 }
 
 .icSearch{
