--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -10,9 +10,9 @@
   align-items: center;
 }
 
-.searchContainer {
-  display: flex;
-}
+// .searchContainer {
+//   display: flex;
+// }
 
 .searchBar {
   background-color: $backgroud-color-secondary;
@@ -25,4 +25,9 @@
   background-color: $backgroud-color;
   width: 15px;
   padding: 7.5px;
+}
+
+.form {
+  display: flex;
+  width: 100%;
 }
