add styles to item component

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 // colors
 $primary: #FFE600;
 $secondary: #3483FA;
@@ -19,3 +21,8 @@ $fnt-xxxl: 46px;
 // spacing
 $spc-sm: 16px;
 $spc-md: 32px;
+
+//images
+$image-size: 180px;
+$border-radius: 4px;
+
