--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -2,7 +2,8 @@
 
 .generalBackground {
   background-color: $backgroud-color;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
   margin: 0;
   padding: 70px 0;
