--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -23,6 +23,7 @@ $spc-sm: 16px;
 $spc-md: 32px;
 
 //images
-$image-size: 180px;
+$image-items-size: 180px;
+$image-description-size: 680px;
 $border-radius: 4px;
 
