add constants to item details section

--- a/src/components/ItemDetail/ItemDetail.module.scss
+++ b/src/components/ItemDetail/ItemDetail.module.scss
@@ -24,10 +24,10 @@
         font-size: $fnt-sm;
         margin-top: $spc-md;
         .stateProduct {
-          margin-right: 10px;
+          margin-right: $spc-sm;
         }
         .hyphen {
-          margin-right: 10px;
+          margin-right: $spc-sm;
         }
       }
       .title {
