--- a/src/components/Error/Error.module.scss
+++ b/src/components/Error/Error.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   .icError {
-    width: auto;
+    width: $image-items-size;
     height: $image-items-size;
     margin: $spc-sm;
   }
